After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689538 - Source object tag set too late in gsocketlistener
Source object tag set too late in gsocketlistener
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2012-12-03 14:58 UTC by Aleksander Morgado
Modified: 2012-12-03 15:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch for the issue (1.11 KB, patch)
2012-12-03 14:59 UTC, Aleksander Morgado
committed Details | Review

Description Aleksander Morgado 2012-12-03 14:58:54 UTC
In accept_ready(), in gsocketlistener.c, the source object tag is set in the GTask after having completed the operation with g_task_return_pointer(), which means that in finish() the source object tag won't be available.

Testing the issue:
 * Compile gtk+ with the broadway backend enabled
 * GDK_BACKEND=broadway gedit
 * firefox http://127.0.0.1:8080/
 * Crash (source object is used to pass the Display in the broadway backend).
Comment 1 Aleksander Morgado 2012-12-03 14:59:41 UTC
Created attachment 230532 [details] [review]
Patch for the issue
Comment 2 Aleksander Morgado 2012-12-03 15:02:41 UTC
Pushed after danw's review.

This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.