gsocketlistener: set source object tag before completing the GTask

Otherwise, the finish() method won't find the source object.

https://bugzilla.gnome.org/show_bug.cgi?id=689538